--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;0,800;1,600;1,700&family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,500&display=swap');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+@import './tailwind.css';
 
 body {
   margin: 0;
@@ -12,3 +9,4 @@ body {
   scroll-behavior: smooth;
   min-height: 100vh;
 }
+
